--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <script src="https://d3js.org/d3.v4.js"></script>
   <div id="device_occurence_chart"></div>
 
-  <script src="./devices.js"></script>
   <script src="./history.js"></script>
 
   <script>
+    const squareSize = 60;
+
     // set the dimensions and margins of the graph
-    var margin = { top: 30, right: 30, bottom: 30, left: 100 },
+    var margin = { top: 30, right: 30, bottom: 100, left: 100 },
       // width:height ratio can be changed
       // chart will be stretched, but text labels won't be
-      width = 2000 - margin.left - margin.right,
-      height = 800 - margin.top - margin.bottom;
+      width = squareSize * timestamps.length,
+      height = squareSize * macAddrs.length;
 
     // append the svg object to the body of the page
     var svg = d3
@@ -48,13 +49,17 @@
 
     // Build X scales and axis: use the values from history.js
     var x = d3.scaleBand().range([0, width]).domain(timestamps).padding(0.01);
-
     svg
       .append("g")
       .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
+      .call(d3.axisBottom(x))
+      .selectAll("text")
+      // .attr("transform", () => {
+      //   return d3.svg.transform().translate(0, 100).rotate(-20);
+      // });
+      .attr("transform", "rotate(-30) translate(-70, 0)");
 
-    // Build X scales and axis:
+    // Build Y scales and axis:
     var y = d3
       .scaleBand() // very basic scale
       .range([height, 0])
