--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
+  <title>ARP Responses</title>
 </head>
 <body>
   <script src="https://d3js.org/d3.v4.js"></script>
   <div id="device_occurence_chart"></div>
 
+  <!-- Load the arp-scan records data -->
   <script src="./history.js"></script>
 
   <script>
-    const squareSize = 60;
+    const squareSize = 30;
+    const squarePadding = 0.1;
 
     // set the dimensions and margins of the graph
-    var margin = { top: 30, right: 30, bottom: 100, left: 100 },
-      // width:height ratio can be changed
-      // chart will be stretched, but text labels won't be
+    const margin = { top: 30, right: 30, bottom: 100, left: 100 },
+      // Graph area
       width = squareSize * timestamps.length,
       height = squareSize * macAddrs.length;
 
     // append the svg object to the body of the page
-    var svg = d3
+    let svg = d3
       .select("#device_occurence_chart") // getElementById() equivalent
       .append("svg") // appendChild() equivalent
       .attr("width", width + margin.left + margin.right) // setAttribute() equivalent
@@ -37,7 +39,7 @@
       .style("font-family", "sans-serif")
       .style("font-weight", "bold")
       .style("text-decoration", "underline")
-      .text("Timeline of Devices Responded to ARP Broadcast");
+      .text("Responses to ARP Broadcast");
 
     // Format the device occurence history for D3.js
     const recordsByOccurence = (function formatRecords(devices) {
@@ -60,27 +62,31 @@
     );
 
     // Build X scales and axis: use the values from history.js
-    var x = d3.scaleBand().range([0, width]).domain(timestamps).padding(0.01);
+    const x = d3
+      .scaleBand()
+      .range([0, width])
+      .domain(timestamps) // x-label
+      .padding(squarePadding); // gap between tiles
     svg
       .append("g")
       .attr("transform", "translate(0," + height + ")")
       .call(d3.axisBottom(x))
       .selectAll("text")
-      // .attr("transform", () => {
-      //   return d3.svg.transform().translate(0, 100).rotate(-20);
-      // });
       .attr("transform", "rotate(-30) translate(-70, 0)");
 
     // Build Y scales and axis:
-    var y = d3
+    const y = d3
       .scaleBand() // very basic scale
       .range([height, 0])
       .domain(macAddrs) // y-label
-      .padding(0.01); // gap between tiles
+      .padding(squarePadding); // gap between tiles
     svg.append("g").call(d3.axisLeft(y)); // .call() is used to apply func(s) to selections
 
     // Build color scale
-    var myColor = d3.scaleLinear().range(["white", "orange"]).domain([0, 1]);
+    const myColor = d3
+      .scaleLinear()
+      .range(["white", "dodgerblue"])
+      .domain([0, 1]);
 
     //Read the data
     (function readData(data) {
