feat: Mask the MAC address last 3 octets for privacy on GitHub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id="device_occurence_chart"></div>
 
   <!-- Load the arp-scan records data -->
-  <script src="./history.js"></script>
+  <script src="./historyMasked.js"></script>
 
   <script>
     const squareSize = 30;
