--- a/index_unmasked.html
+++ b/index_unmasked.html
@@ -8,7 +8,7 @@
   <div id="device_occurence_chart"></div>
 
   <!-- Load the arp-scan records data -->
-  <script src="./historyMasked.js"></script>
+  <script src="./history.js"></script>
 
   <!-- Visualize with D3.js-->
   <script src="./visualize.js"></script>
